# node-mapr-streams

./: CMakeLists.txt  README.md  binding.gyp  build_run  clean  mstreams.js  package-lock.json  package.json  tsconfig.json
examples/mstreams-server/: app.js  package-lock.json  package.json
examples/mstreams-server/routes/: routes.js
examples/mstreams-viewer/: package-lock.json  package.json
examples/mstreams-viewer/src/: App.css  App.js  index.css  index.js
src/: addon.cc  mconsumer.cc  mconsumer.h  mproducer.cc  mproducer.h  mstreams.cc  mstreams.d.ts  mstreams.h  mstreams.js
test/: catch.hpp  testmconnection.cc
